tests/Spire.Analyzers.Tests/SPIRE005/cases/Detect_GenericOverload_LambdaBody.cs
//@ should_fail
// Ensure that SPIRE005 IS triggered when CreateInstance<MustInitStruct>() is used inside a lambda body.
public class Detect_GenericOverload_LambdaBody
{
    public void Method()
    {
        Func<MustInitStruct> factory = () => Activator.CreateInstance<MustInitStruct>(); //~ ERROR
    }
}
